# rustface

./: Cargo.toml
src/: lib.rs
src/classifier/: lab_boosted_classifier.rs  surf_mlp_classifier.rs
src/common/: image_pyramid.rs  mod.rs
src/detector/: mod.rs
src/feat/: lab_boosted_featmap.rs  surf_mlp_featmap.rs
src/model/: mod.rs
