[package]
name = "rustface"
description = "Face detection library, based on the C++ SeetaFace engine."
version = "0.1.7"
repository = "https://github.com/atomashpolskiy/rustface"
readme = "README.md"
keywords = ["face", "detection"]
categories = ["multimedia::images", "science"]
authors = ["Andrei Tomashpolskiy <nordmann89@gmail.com>"]
license = "BSD-2-Clause"
exclude = [
    "assets/*",
]
edition = "2021"

[dependencies]
num = { version = "0.3", default-features = false, features = ["libm"] }
byteorder = {version = "1.2.6", default-features = false }
rayon = { version = "1.4.1", optional = true }
ink_primitives = { version = "3.0.0-rc9", default-features = false }
ink_metadata = { version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc9", default-features = false }
ink_storage = { version = "3.0.0-rc9", default-features = false }
ink_lang = { version = "3.0.0-rc9", default-features = false }
ink_prelude = { version = "3.0.0-rc9", default-features = false }
pink-extension = { version = "0.1.5", default-features = false }
fixed = { version = "1.15.0", default-features = false }
fixed-macro = { version = "1.1.1", default-features = false }

[dev-dependencies]
image = "0.23"
imageproc = "0.22.0"
criterion = "0.3"

[lib]
bench = false # workaround for "Unrecognized option: 'save-baseline'"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true

[features]
default = ["rayon"]
